--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,9 @@ main{
     color: black;
     padding-top: 10px;
     padding-bottom: 100px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 h1 h2 {
     font-family: 'Jomhuria', cursive;
@@ -17,9 +20,24 @@ footer{
     padding-bottom: 100px;
 }
 
-header{
+header {
     background-color: rgb(243, 237, 237);
 }
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+
+}
+
+column {
+
+    float: left;
+
+    padding: 20px;
+
+}
+
 a.button {
     border-radius: 2px;
     text-align: center;
@@ -33,20 +51,52 @@ a.button {
     margin-bottom: 2px;
 
 }
-#list{
-    list-style: none;
 
+
+form{
+    background-color: #d4e3fc;
+    border-radius: 50px;
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 10px;
+    margin-below: 10px;
 }
 
-#viewpbi{
-margin-left: 150px;
-    background-color: dimgrey;
-    color: white;
-    border-radius: 2px;
-    margin-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: medium;
+#left {
+    width:40%;
+    float: left;
+    text-align: center;
+    margin-right: 2.5%;
+    margin-left: 7.5%;
 }
+#right {
+    width:40%;
+    margin-right: 7.5%;
+    margin-left: 2.5%;
+    float: right;
+    text-align: center;
+}
+
+.register {
+    background-color: white;
+    border-radius: 50px;
+}
+.submit {
+    background-color: white;
+    border-radius: 50px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+#login {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    background-color: white;
+    border-radius: 50px;
+}
+
 
 
