--- a/pBacklog.css
+++ b/pBacklog.css
@@ -41,18 +41,20 @@
     padding: 15px 20px;
     text-align: center;
     margin: 4px 0px;
+    width: 350px;
     
 }
 
 .vertical-menu, #scroll{
     width: 100%;
     min-width: 250px;
-    max-width: 350px;
+    max-width: 400px;
     /*min-height: 500px;*/
-    margin: 0 15px;
+    margin: 0 10px;
     padding: 8px;
     overflow :auto;
-    height: 400px;
+    height: 500px;
+
 }
 .PBIheader{
     padding: 10px;
@@ -63,17 +65,10 @@
 
     width: 90%;
     float: right;
-    background-color: brown;
-
 }
-.col{
-    background-color: blue;
 
-}
-#teamform, #bitem{
 
-margin-right: auto;
-    margin-left: auto;
-}
+
+
 
 
