--- a/assets/style.css
+++ b/assets/style.css
@@ -101,5 +101,11 @@ form{
     width: 25%;
     float: left;
 }
+#groupnames{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+
+}
 
 
