--- a/task_style.css
+++ b/task_style.css
@@ -1,6 +1,7 @@
 #task {
     width: 20%;
     margin-left: 100px;
+    margin-right: 30px;
     border-radius: 10px;
 float: left;
     background: #d4e3fc;
@@ -38,9 +39,7 @@ padding: 20px;
 }
 th,td{
     border-collapse: collapse;
-    padding-left: 30px;
-   padding-top: 20px;
-    padding-bottom: 20px;
+    padding:20px;
     text-align: left;
     border: 1px dimgrey;
     border-collapse: collapse;
